--- a/WebApp/Views/_ViewImports.cshtml
+++ b/WebApp/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
-﻿
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using WebApp.ViewModels
+@using Infrastructure.Entitites
+@using Microsoft.AspNetCore.Identity
+@using WebApp.Models.Sections
