some styling fixed

--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -3,4 +3,5 @@
 }
 <partial name="~/Views/Shared/_Showcase.cshtml" />
 <partial name="~/Views/Shared/_Features.cshtml" />
+<partial name="~/Views/Shared/_DownloadApp.cshtml" />
 <partial name="~/Views/Shared/_SubscribeNewsletter.cshtml" />
