--- a/WebApp/Views/Shared/_DownloadApp.cshtml
+++ b/WebApp/Views/Shared/_DownloadApp.cshtml
@@ -15,9 +15,13 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                 </div>
-                <h4>Editor's Choice</h4>
-                <p class="statistics">rating 4.7, 187K+ reviews</p>
-                <img src="~/images/icons/appstore.svg" alt="appstore logo" />
+                <div class="download">
+                    <div class="download-info">
+                        <h4>Editor's Choice</h4>
+                        <p class="statistics">rating 4.7, 187K+ reviews</p>
+                    </div>
+                    <img src="~/images/icons/appstore.svg" alt="appstore logo" />
+                </div>
             </div>
             <div class="download-app-group">
                 <p class="store">Google Play</p>
@@ -28,9 +32,13 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                 </div>
-                <h4>App of the Day</h4>
-                <p class="statistics">rating 4.8, 30K+ reviews</p>
-                <img src="~/images/icons/googleplay.svg" alt="google play logo" />
+                <div class="download">
+                    <div class="download-info">
+                        <h4>App of the Day</h4>
+                        <p class="statistics">rating 4.8, 30K+ reviews</p>
+                    </div>
+                    <img src="~/images/icons/googleplay.svg" alt="google play logo" />
+                </div>
             </div>
         </div>
     </div>
