--- a/WebApp/Views/Course/Courses.cshtml
+++ b/WebApp/Views/Course/Courses.cshtml
@@ -31,37 +31,40 @@
             {
                 @foreach (var course in Model.Courses)
                 {
-                    <a class="course" asp-action="Details" asp-controller="Courses" asp-route-id="@course.Id">
-                        @if (course.IsBestseller)
-                        {
-                            <div class="bestseller">Best Seller</div>
-                        }
+                    <div class="course-box">
+                        <a class="course" asp-action="Details" asp-controller="Courses" asp-route-id="@course.Id">
+                            @if (course.IsBestseller)
+                            {
+                                <div class="bestseller">Best Seller</div>
+                            }
+                            <button class="bookmark"><i class="fa-regular fa-bookmark"></i></button>
+                            <img src="~/images/courses/@course.Image" alt="@course.Title" />
 
-                        <a asp-action="Join" asp-controller="Courses" asp-route-id="@course.Id" class="btn btn-circle bookmark"><i class="fa-regular fa-bookmark"></i></a>
-                        <img src="~/images/courses/@course.Image" alt="@course.Title"/>
+                            <div class="content">
+                                <h5 class="title">@course.Title</h5>
+                                <p class="author">@course.Author</p>
 
-                        <div class="content">
-                            <h5 class="title">@course.Title</h5>
-                            <p class="author">@course.Author</p>
-
-                            <div class="pricing">
-                                @if (!string.IsNullOrEmpty(course.DiscountPrice))
-                                {
-                                    <div class="discount">@course.DiscountPrice</div>
-                                }
-                                <div class="original @(!string.IsNullOrEmpty(course.DiscountPrice) ? "discount-enabled" : "")">@course.OriginalPrice</div>
-                            </div>
-                            <div class="footer">
-                                <div class="hours">
-                                    <i class="fa-regular fa-clock"></i>@course.Hours hours
+                                <div class="pricing">
+                                    @if (!string.IsNullOrEmpty(course.DiscountPrice))
+                                    {
+                                        <div class="discount">@course.DiscountPrice</div>
+                                    }
+                                    <div class="original @(!string.IsNullOrEmpty(course.DiscountPrice) ? "discount-enabled" : "")">@course.OriginalPrice</div>
                                 </div>
-                                <div class="likes">
-                                    <i class="fa-regular fa-thumbs-up"></i>@course.LikesInProcent (@course.NumberOfLikes)
-                                </div>
+                                <div class="footer">
+                                    <div class="hours">
+                                        <i class="fa-regular fa-clock"></i>@course.Hours hours
+                                    </div>
+                                    <div class="likes">
+                                        <i class="fa-regular fa-thumbs-up"></i>@course.LikesInProcent (@course.NumberOfLikes)
+                                    </div>
 
+                                </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+
+                    </div>
+
 
                 }
             }
