--- a/WebApp/wwwroot/css/scss/_sections.scss
+++ b/WebApp/wwwroot/css/scss/_sections.scss
@@ -6,6 +6,7 @@
 @import './sections/_account_details.scss';
 @import './sections/_courses.scss';
 @import './sections/_subscribe_newsletter.scss';
+@import './sections/_download_app.scss';
 
 
 @import './sections/_footer.scss';
